# Cpp-Qt-Minecraft-Ping

./: CMakeLists.txt  README.md  main.cpp  mc_client.hpp  mc_resolver.hpp  minecraft_ping.hpp
